# iamartist

./: .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  setup.sh  test_psd_handler.sh
.github/workflows/: build.yml
reference/Assembly-CSharp/: AdventsDrawer.cs  Assembly-CSharp.csproj  BattleRoyale.cs  ButtonAnimator.cs  CatRotator.cs  DraggableFrame.cs  DropdownToggle.cs  EmoteDonut.cs  EmoteDonutEntry.cs  EmoteParticle.cs  EmoteSpawner.cs  FadeAnimation.cs  FlashAnimation.cs  FrameAnimation.cs  ItemConsumer.cs  ItemScaleSetting.cs  ItemScaler.cs  Leaderboard.cs  LeaderboardEntry.cs  LocalizerLink.cs  MenuTabs.cs  MultiplayerStorage.cs  NewItemPopup.cs  OnDefocusCallback.cs  OnHoverCallback.cs  OpenScaleAnimation.cs  Resizable.cs  RotateObject.cs  RotateToVelocity.cs  Scaler.cs  ScreenSize.cs  SelectionEntry.cs  SelectionMenu.cs  ShakeAnimation.cs  SteamInventoryTest.cs  ToggleGameObject.cs  ToggleOnHover.cs
reference/Assembly-CSharp/AutoStart/: IAutoStart.cs  WinAutoStart.cs
reference/Assembly-CSharp/BongoCat/: ActiveWindowTracker.cs  AlwaysOnTop.cs  (+87 more)
scripts/: build_python_binary.sh  build_sidecar.bat  build_sidecar.sh
src/: App.css  App.tsx  api.ts  store.ts  types.ts
src-python/: psd_composite.py  psd_composite.spec  psd_handler.spec  requirements.txt
src-tauri/: .gitignore  Cargo.toml  build.rs  psd_handler.py  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: key_listener.rs  lib.rs  main.rs  psd_handler.rs  smb_handler.rs
src/components/: AnimView.tsx  LayerList.tsx  SmbConfigPanel.tsx  SpineView.tsx
(+82 files in other folders)
