[package]
name = "iamartist"
version = "0.1.0"
description = "PSD layer exporter with SMB upload"
authors = ["you"]
edition = "2021"

[lib]
name = "iamartist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
